k3s-all-files/longhorn/middleware-oauth2.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-oauth2-auth
  namespace: longhorn
spec:
  forwardAuth:
    address: http://longhorn-auth-oauth2-proxy.longhorn.svc.cluster.local:80
    trustForwardHeader: true
    authResponseHeaders:
      - "X-Auth-Request-User"
      - "X-Auth-Request-Email"
